--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,10 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>NgSharedComponents</title>
-  <base href="/">
+<my-modal>test1</my-modal>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
-</html>
+<script>
+  const $modal = document.querySelector('my-modal');
+  // $modal.isOpen = true;
+</script>
+
+
+
+<super-btn text="hello"></super-btn>
